--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
             <!-- Sponspors -->
             <section class="sponspors">
                 <div class="sponspors_info">
-                    <h3 class="sponspors_title">Out Sponspors</h3>
+                    <h3 class="sponspors_title">Our Sponspors</h3>
                     <p class="sponspors_description">A sponsorship is when a company commits money or resources to a nonprofit event or program in exchange for specific promotional benefits.</p>
-                </div>
-                <div class="sponspors_logo">
-                    <img src="./images/sponsors/amazon.png" alt="amazon" class="sponsor_image">
-                    <img src="./images/sponsors/figma.png" alt="figma" class="sponsor_image">
-                    <img src="./images/sponsors/google.png" alt="google" class="sponsor_image">
-                    <img src="./images/sponsors/spotify.png" alt="spotify" class="sponsor_image">
-                    <img src="./images/sponsors/telerama.png" alt="telerama" class="sponsor_image">
+                </div>           
+                <div class="sponsor_icons">
+                    <img src="./images/sponsors/amazon.png" alt="" class="sponsor_icon">
+                    <img src="./images/sponsors/figma.png" alt="" class="sponsor_icon">
+                    <img src="./images/sponsors/google.png" alt="" class="sponsor_icon">
+                    <img src="./images/sponsors/spotify.png" alt="" class="sponsor_icon">
+                    <img src="./images/sponsors/telerama.png" alt="" class="sponsor_icon">
                 </div>
             </section>
      </main>
