sponsore icon fixed

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3 class="sponspors_title">Our Sponspors</h3>
                     <p class="sponspors_description">A sponsorship is when a company commits money or resources to a nonprofit event or program in exchange for specific promotional benefits.</p>
                 </div>           
-                <div class="sponsor_icons">
+                <div class="sponsor_images">
                     <img src="./images/sponsors/amazon.png" alt="" class="sponsor_icon">
                     <img src="./images/sponsors/figma.png" alt="" class="sponsor_icon">
                     <img src="./images/sponsors/google.png" alt="" class="sponsor_icon">
