--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     
                 </div>
-            </section> -->
+            </section>
             <!-- Sponspors -->
             <section class="sponspors">
                 <div class="sponspors_info">
